--- a/talpid-core/Cargo.toml
+++ b/talpid-core/Cargo.toml
@@ -31,7 +31,7 @@ rand = "0.7"
 
 
 [target.'cfg(not(target_os="android"))'.dependencies]
-openvpn-plugin = { git = "https://github.com/mullvad/openvpn-plugin-rs", branch = "auth-failed-event", features = ["serde"] }
+openvpn-plugin = { git = "https://github.com/mullvad/openvpn-plugin-rs", rev = "fd3fc9652c1ec5cdb32c7477de598586cf523a07", features = ["serde", "auth-failed-event"] }
 parity-tokio-ipc = "0.7"
 triggered = "0.1.1"
 tonic = "0.3.1"
